@@ -65,6 +65,7 @@ class DcopHandler : public QObject, virtual public AmarokIface
       virtual void volumeDown();
       virtual void mute();
       virtual void setEqualizerEnabled( bool active );
+      virtual void configEqualizer();
       virtual void enableOSD(bool enable);
       virtual void showOSD();
       virtual void togglePlaylist();
